--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "single-file-components-for-alpinejs",
+  "name": "blognote",
   "version": "1.0.0",
   "description": "",
   "main": "build.js",
